added create functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h5 class="text-center my-3">Current Tasks</h5>
 
       <!-- empty div will eventually house the appended html from javascript. -->
-      <div id="tasks"></div>
+      <div id="tasks" class="mx-2"></div>
     </div>
 
     <!-- Modal -->
