--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <div class="app">
-      <h4 class="text-center my-3">Todo's for Today</h4>
+      <h4 class="text-center my-3">Today's Todos</h4>
 
       <div
         id="addNewTask"
